[package]
edition = "2021"
name = "adventofcode2022"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "solve"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.72"
clap = {version = "4.3", features = ["derive"]}
env_logger = "0.10.0"
log = "0.4.19"
test-log = "0.2.12"
